<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/prompt_subject"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_description" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_location"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_when" />

        <TextView
            android:id="@+id/date"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_start" />

        <TextView
            android:id="@+id/startTime"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp" />

        <LinearLayout
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/doneBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="135dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_green"
                android:text="@string/action_done"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/cancelBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="135dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_blue"
                android:text="@string/action_cancel"
                android:textColor="#ffffff" />
        </LinearLayout>

        <Button
            android:id="@+id/dltBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="288dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_red"
            android:text="@string/action_dlt"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>