<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="287dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_oldpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_npassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/cfmnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_cfmpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chgbtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_green"
            android:text="@string/action_chg"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/cancelbtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_blue"
            android:text="@string/action_cancel"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>