<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_fname"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/fname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_lname"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/lname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_address"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_pnumber"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/pnumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crdtcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_crdtcard"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/crdtcard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_email"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_uname"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/username2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crtat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/acc_crtat"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/crtat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#455a64"
            android:textStyle="bold" />
        
    </LinearLayout>

</ScrollView>
