<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="287dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center" >
    
    <TextView
        android:id="@+id/rstpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_txt_reset"
        android:textSize="17sp"
        android:layout_marginTop="10dp" />
    
    <EditText
        android:id="@+id/rstemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_rstemail"
        android:inputType="textEmailAddress"
        android:layout_gravity="center" />
    
   <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chgbtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_red"
            android:text="@string/action_rst"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/cancelbtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_blue"
            android:text="@string/action_cancel"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>