<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <EditText
                android:id="@+id/username"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/sign_in_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="135dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_green"
                    android:text="@string/title_activity_signin"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/register"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="135dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/btn_blue"
                    android:text="@string/title_activity_register"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="287dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="0.32"
                android:background="@drawable/btn_red"
                android:text="@string/action_forgot_password"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</merge>