<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/reroute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_txt"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/yesBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_green"
            android:text="@string/action_yes"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/noBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_red"
            android:text="@string/action_no"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>
